QGroupBox: Fix the focus rect of the title when using stylesheet

Task-number: QTBUG-13015
Reviewed-by: Olivier Goffart